<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/hint_nombre"
        android:inputType="textCapWords"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/hint_apellidos"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/etEdad"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/hint_edad"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/etApellidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <RadioGroup
        android:id="@+id/rgGenero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etEdad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/rbHombre"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:text="@string/hombre" />

        <RadioButton
            android:id="@+id/rbMujer"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="@string/mujer" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spEstadoCivil"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/rgGenero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <Switch
        android:id="@+id/switchHijos"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/tiene_hijos"
        app:layout_constraintTop_toBottomOf="@+id/spEstadoCivil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tvMensaje"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/switchHijos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnGenerarNotificacion"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/notificacion"
        app:layout_constraintTop_toBottomOf="@+id/tvMensaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnreset"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/reset"
        app:layout_constraintTop_toBottomOf="@+id/btnGenerarNotificacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
